--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.5">
     <title>A Woods Family Christmas Scoreboard</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -21,9 +20,9 @@
                     <thead>
                         <tr>
                             <th>Name</th>
-                            <th>Snowball Toss</th>
-                            <th>North Pole Plinko</th>
-                            <th>Reindeer Fluff Roundup</th>
+                            <th>The Candy Cane Shuffle</th>
+                            <th>Candy Crane</th>
+                            <th>Peppermint Pickup</th>
                         </tr>
                     </thead>
                     <tbody id="score-input-body">
@@ -47,9 +46,9 @@
                     <tr>
                         <th>Rank</th>
                         <th>Name</th>
-                        <th>Snowball Toss</th>
-                        <th>North Pole Plinko</th>
-                        <th>Reindeer Fluff Roundup</th>
+                        <th>The Candy Cane Shuffle</th>
+                        <th>Candy Crane</th>
+                        <th>Peppermint Pickup</th>
                         <th>Total Score</th>
                     </tr>
                 </thead>
@@ -65,7 +64,6 @@
 
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-
     <script>
         // *** IMPORTANT: REPLACE THE FIREBASE CONFIGURATION BELOW ***
         const firebaseConfig = {
@@ -89,3 +87,4 @@
 </body>
 
 </html>
+
