--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.5">
-    <title>A Woods Family Christmas Scoreboard</title>
+    <title>The Peppermint Playoffs Scoreboard</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <header>
-        <h1>A Woods Family Christmas</h1>
-        <h2>Leaderboard</h2>
+        <h1>The Peppermint Playoffs</h1>
+        <h2>Niemann Family Leaderboard</h2>
     </header>
 
     <div id="input-screen">
@@ -87,4 +87,5 @@
 </body>
 
 </html>
+
 
